# project-suggester

./: .cursorrules  .env.example  .gitignore  BUILD_GUIDE_README.md  README.md  START_HERE.md  START_HERE_CURSOR.md  docker-compose.yml  package-lock.json  package.json  research_pivot_advisor_system.plan.md  run_all_tests.sh  setup.sh  validate_agent.sh  validate_phase1.sh
.claude/: settings.local.json
docs/: ACTION_PLAN.md  (+12 more)
research-advisor-backend/: .dockerignore  .env.example  Dockerfile  RAILWAY_DEPLOY.md  README.md  alembic.ini  pyproject.toml  pytest.ini  railway.json
research-advisor-backend/alembic/: env.py
research-advisor-backend/alembic/versions/: 6a30bcac59c9_initial_migration.py  7b2c1d3e4f5a_add_embedding_column.py  8c3d2e4f6a7b_add_openalex_taxonomy_columns.py  9d4e5f6a7b8c_add_shared_analyses.py
research-advisor-backend/app/: config.py  debug_log.py  main.py
research-advisor-backend/app/api/: routes.py
research-advisor-backend/app/jobs/: gap_map_scraper_job.py
research-advisor-backend/app/models/: gap_map_models.py  schemas.py  shared_models.py
research-advisor-backend/app/services/: document_parser.py  embedding_service.py  gap_map_embedder.py  gap_map_repository.py  gap_map_scraper.py  gap_map_topic_enricher.py  gap_retriever.py  info_collector.py  novelty_analyzer.py  openalex_client.py  pivot_matcher.py  report_generator.py  shared_analysis_repository.py  web_search_client.py
research-advisor-backend/app/services/scrapers/: base_scraper.py  convergent_scraper.py  encyclopedia_scraper.py  homeworld_scraper.py  threeie_scraper.py  wikenigma_scraper.py
research-advisor-backend/scripts/: check_pivot_match.py  embed_gap_map.py  railway_deploy.sh  run_psittacara_regression.py  seed_gap_map.py  test_psittacara_flow.py
research-advisor-backend/tests/: __init__.py  conftest.py  test_document_parser.py  test_gap_map_repository.py  test_gap_retriever.py  test_info_collector.py  test_novelty_analyzer.py  test_openalex_client.py  test_pipeline_and_fallbacks.py  test_pivot_matcher.py  test_report_generator.py  test_scrapers.py  test_topic_taxonomy.py  test_web_search_client.py
research-advisor-backend/tests/evaluation/: __init__.py  conftest.py  run_evaluation.py  test_novelty_regression.py
research-advisor-backend/tests/evaluation/benchmarks/: __init__.py  novelty_benchmark.json
research-advisor-backend/tests/integration/: conftest.py  test_api_endpoints.py
(+28 files in other folders)
